<resources>
    <string name="app_name">EXPE</string>
    <string name="welcome">Welcome</string>
    <string name="Phonenumber">Phone Number</string>
    <string name="confirmyou">Confirm it\'s you</string>
    <string name="confirm">Confirm</string>
    <string name="OTP">-  OTP  -</string>
    <string name="Login">- Login -</string>
    <string name="verified">Verified</string>
    <string name="unverified">Unverified</string>
    <string name="checkin">CheckIn</string>
    <string name="successful">Successful</string>
    <string name="cancel">Cancel</string>
    <string name="recording">Recording...</string>
    <string name="attention">Attention</string>
    <string name="Proceed">Proceed</string>
    <string name="loadmore">Load More</string>
    <string name="submit">Submit</string>
    <string name="notfound">Business Not Found</string>
    <string name="takequestions">Take me to Questions</string>
    <string name="nextquestions">Next Question</string>
    <string name="WatchVideos">Watch More Videos</string>
    <string name="WatchVideosagain">Watch Video again</string>
    <string name="backtohome">Back to Home</string>
    <string name="Verify">Verify</string>
    <string name="unauthorizeduser">Unauthorized user.</string>
    <string name="regaccount">Don\'t have an account?</string>
    <string name="otpnotreceived">Didn\'t Received OTP?</string>
    <string name="Resend">Resend</string>
    <string name="Signup">Sign up</string>
    <string name="Signuptxt">-  Sign Up  -</string>
    <string name="logintxt">Login</string>
    <string name="loginalrttxt">Login</string>
    <string name="otpalrttxt">OTP</string>
    <string name="editadditiondetail">Edit additional details</string>
    <string name="firstname">First Name *</string>
    <string name="lastname">Last Name *</string>
    <string name="alreadyaccount">Already have an account?</string>
    <string name="phonenumber">Phone Number *</string>
    <string name="email">Email Address</string>
    <string name="dob">DOB</string>
    <string name="uploacreceipt">Uploac Receipt</string>
    <string name="gender">Gender</string>
    <string name="displayname">Display name</string>
    <string name="invalidemail">Invalid Email address</string>
    <string name="male">Male</string>
    <string name="upload_doc">Upload Document</string>
    <string name="upload_selfie">Upload Selfie</string>
    <string name="Skip">Skip</string>
    <string name="birthdate">Date of Birth</string>
    <string name="Guidelines">-   Guidelines   -</string>
    <string name="save_expore">Save and Expore</string>
    <string name="Store">Store</string>
    <string name="storeitemredeem">Store Item Redeem</string>
    <string name="level">Level</string>
    <string name="Prizes">Prizes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="leaderboard">Leader Board</string>
    <string name="SpecialEvents">Special Events</string>
    <string name="Notifications">Notifications</string>
    <string name="Videos">Videos</string>
    <string name="review">Review</string>
    <string name="Questions">Questions</string>
    <string name="Result">Results</string>
    <string name="LuckyDraw">Lucky Draw</string>
    <string name="take_picture">Take picture</string>
    <string name="nonotifications">No Notifications found</string>
    <string name="noreviews">No Reviews found</string>
    <string name="noactive">No Active Challenges found</string>
    <string name="nocomplate">No Complate Challenges found</string>
    <string name="nochallenges">No Challenges found</string>
    <string name="noevents">No Events found</string>
    <string name="novideos">No Videos found</string>
    <string name="noprizes">No Prizes found</string>
    <string name="nostore">No Store data found</string>
    <string name="deliverylocation">Delivery Location</string>
    <string name="picklocation">Pick Up Location</string>
    <string name="about">About</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="networktitle">Network issue</string>
    <string name="challangedaily">Available Daily tasks for you</string>
    <string name="challangeweekly">Available Weekly tasks for you</string>
    <string name="challangemonthly">Available Monthly tasks for you</string>
    <string name="defaulttimer">00:00</string>
    <string name="challengesmsg">Complete Challenges to Earn Additional Credits</string>
    <string name="loginmsg">WE ARE HAPPY TO HAVE YOU.\n LOGIN OR SIGNUP
            TO BEGIN YOUR EXPERIENCE.</string>
    <string name="otpmsg">ONE-TIME PASSWORD (OTP) WAS SENT TO YOUR MOBILE TELEPHONE NUMBER. PLEASE ENTER IT BELOW.</string>
    <string name="docmsg">File must be in PDF or JPG</string>
    <string name="doc_msg">Upload and verify document</string>
    <string name="Signupmsg">LOGIN OR SIGN UP TO BEGIN</string>
    <string name="upload_msg">Please upload government issue document to verify your identity.</string>
    <string name="loginalertmsg">Login Message</string>
    <string name="docvalidatemsg">File must be less than 5 MB in size.</string>
    <string name="store_msg">YOUR FEEDBACK MATTERS.
            REDEEM CREDITS FOR GOODS &amp; SERVICES</string>
    <string name="newreview">REVIEW SUBMITTED</string>
    <string name="newreviewmsg">A KKMT TEAM MEMBER WILL REVIEW SHORTLY</string>
    <string name="updatereview">YOUR REVIEW HAS BEEN UPDATED</string>
    <string name="updatereviewmsg">CREDITS HAVE BEEN ADDED.\n IF YOU HAVE ANY QUERIES PLEASE CONTACT US VIA WHATSAPP</string>
    <string name="businessmsg">Business name is require.</string>
    <string name="LuckyDrawmsg">SPIN TO WIN FREE CREDITS</string>
    <string name="eventsmsg">YOU’RE INVITED</string>
    <string name="notify_msg">PERSONALIZED JUST FOR YOU</string>
    <string name="Videos_msg">ENHANCE YOUR PERSPECTIVE</string>
    <string name="thankyou_msg">THANK YOU FOR SUBMITTING OUR TECHNICAL TEAM WILL INVESTIGATE</string>
    <string name="resultmsg">Our admin will take a look your progress and wining credits will be added to your account shortly.</string>
    <string name="questionsmsg">Answer <u>Correctly</u> to Earn Credits</string>
    <string name="surveysmsg">Answer <u>Correctly</u> to complete Survey</string>
    <string name="review_msg">By submitting the reviews you will earn points describe below </string>
    <string name="networkmeaasge">Network Not Available</string>
    <string name="KKMTidrequired">KKMT ID required.</string>
    <string name="security">All Reviews you submit are Confidential.\n\n
        Reviews are stored on our server and protected by our security systems.\n\n
        We do not disclose any of your specific personal details to Employees or Business owners.\n\n
        Our staff members are bound by Confidentiality Agreements and will be severely penalized if your personal details are ever disclosed to any third party.
            </string>
    <string name="ads">We pride ourselves in not offering traditional Ads.\n\n
All of our content is geared toward customer education and employee improvement.\n\n
Viewing any of our video content is completely Optional.\n\n
We do not sell your data to any third parties.</string>
    <string name="unverifiedlevel">To Protect the integrity of our system, please Become a Verified User by Uploading the relevant documents.\n\n
            You may continue using the EXPE app but you will not earn any more credits until you become Verified.</string>
    <string name="help">If you have any questions, feel free to reach out.\n\n
        Whatsapp or Call: 1(868)283-5568 or 1(868)313-5568\n\n
        Email: HELP@KKMTGROUP.com
</string>
    <string name="aboutmsg">The EXPE Mobile Application and all respective trademarks are owned and operated by KKMT Research Limited, a subsidiary of KKMT Holdings Limited.\n\n
The KKMT Group of Companies was formed to create positive disruption in Customer Service within Trinidad and Tobago whilst delivering dynamic solutions to all of our partners.\n\n
We look forward to serving you.
</string>
    <string name="GPSAlertDialogTitle">GPSAlertDialogTitle</string>
    <string name="GPSAlertDialogMessage">GPSAlertDialogMessage</string>
    <string name="onestar">1 star</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="fivestar">5 Star</string>
    <string name="dummy_displayName">Naria Gonzaleia</string>
    <string name="dummy_lastname">Gonzaleia</string>
    <string name="dummy_firstname">Naria</string>
    <string name="dummy_phonenumber">+19512389514</string>
    <string name="dummyemail">Naria@gmail.com</string>
    <string name="date">15/05/1995</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reviewnoteserror">For 1 star and 5 star rating Written note or Voice note is require.</string>
    <string name="action_settings">Settings</string>
    <string name="businessscan">Business Search</string>
    <string name="employeescan">Employee Search</string>
    <string name="businessrason1">I am at diffrent location</string>
    <string name="businessrason2">Location is Next Door</string>
    <string name="businessrason3">Wrong Location Name</string>
    <string name="empreson1">I am not seeing my CSR</string>
    <string name="empreson2">I am seeing other employees</string>
    <string name="empreson3">Wrong Location Name</string>
    <string name="youtubeAPIKey">AIzaSyAEzt456WncF4qyzfzFvxdqjK9vIQ9c3Ow</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chb_bussiness_1">I am at a different location</string>
    <string name="chb_bussiness_2">Location is Next Door</string>
    <string name="chb_bussiness_3">Wrong Location Name</string>
    <string name="videocredit">Watch the Video, then Answer the Questions to Earn Exclusive Credits</string>
    <string name="videodesc">Watch at those amazing videos and <font color='#FC9A1F'>earn credits.</font></string>
    <string name="chb_helper_1">I am not seeing my CSR</string>
    <string name="chb_helper_2">I am seeing other employees (Not my CSR)</string>
    <string name="chb_helper_3">Not seeing Any employees</string>
    <string name="editeadditionaldetails">Edit additional details (15 Hours Left)</string>
    <string name="eventDesc">You’re about to see art in its truest form. This a beautiful way of expressing what is only possible through human ingenuity.You’re about to see art in its truest form. This a beautiful way of expressing what is only possible through human ingenuity.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_active_challenge">ActiveChallenge</string>
    <string name="tab_review_1">Pending Reviews</string>
    <string name="tab_review_2">Completed Reviews</string>
    <string name="tab_text_1">Active Challenges</string>
    <string name="tab_text_2">Completed Challenges</string>
    <string name="pickuplocation">Pick Up From EXPE Store Locations</string>
    <string name="material_calendar_monday">M</string>
    <string name="material_calendar_tuesday">T</string>
    <string name="material_calendar_wednesday">W</string>
    <string name="material_calendar_thursday">T</string>
    <string name="material_calendar_friday">F</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">S</string>
</resources>