<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Login.Login">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/backimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottomround"
            android:padding="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/Login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayou"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayou"
                android:layout_width="0dp"
                android:layout_height="@dimen/_46dp"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginRight="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:background="@drawable/numberfield"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutx"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="@dimen/_16dp"
                    android:layout_marginLeft="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:layout_marginBottom="@dimen/_12dp"
                    android:src="@drawable/ic_phonenumber"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/edt_phone_num"
                android:layout_width="0dp"
                android:layout_height="@dimen/_62dp"
                android:layout_marginLeft="@dimen/_36dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:fontFamily="@font/lato_regular"
                android:gravity="center_vertical"
                android:hint="@string/Phonenumber"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="13"
                android:maxLines="1"
                android:paddingLeft="@dimen/_8dp"
                android:paddingRight="@dimen/_8dp"
                android:paddingBottom="@dimen/_16dp"
                android:textSize="@dimen/_14dp"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayou"
                app:layout_constraintStart_toStartOf="@+id/constraintLayou"
                app:layout_constraintTop_toTopOf="@+id/constraintLayou" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14dp"
                android:layout_marginBottom="@dimen/_18dp"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayou"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/constraintLayou"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayou">

                <TextView
                    android:id="@+id/txt_proceed"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_46dp"
                    android:background="@drawable/proceedback_orange"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_16dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:text="@string/Proceed"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:layout_marginRight="@dimen/_14dp"
                    android:layout_marginBottom="@dimen/_12dp"
                    android:padding="@dimen/_2dp"
                    android:src="@drawable/ic_preceed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_proceed"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_14dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:background="@drawable/saperator"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/regaccount"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_signup"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutx" />

            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_4dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/Signup"
                android:textColor="@color/appcolor"
                android:textSize="@dimen/_12dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_80dp"
            android:layout_marginTop="@dimen/_12dp"
            android:src="@drawable/logo_kkmt"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_100dp"
            android:layout_height="@dimen/_100dp"
            android:background="@drawable/back_white_logo"
            android:padding="@dimen/_6dp"
            android:src="@drawable/ic_expe_logo"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/welcomeuser"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_28dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/img_login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/img_login" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_32dp"
            android:layout_marginRight="@dimen/_32dp"
            android:layout_marginBottom="@dimen/_32dp"
            android:fontFamily="@font/lato_medium"
            android:gravity="center"
            android:text="WE ARE HAPPY TO HAVE YOU\n LOGIN OR SIGN UP \n TO BEGIN YOUR EXPERIENCE"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Switch
            android:id="@+id/sw_emp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_12dp"
            android:fontFamily="@font/lato_semibold"
            android:text="Employee"
            android:textColor="@color/white"
            android:textSize="@dimen/_12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>