<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_dark"
        tools:context=".Activity.Video.VideoPlayer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cnt_tool"
            android:layout_width="0dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Videos"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/_35dp"
                android:layout_height="@dimen/_35dp"
                android:layout_marginLeft="@dimen/_8dp"
                android:padding="@dimen/_10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/_2dp"
                android:background="@color/white_8"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="@dimen/_36dp"
                android:layout_height="@dimen/_2dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.potyvideo.library.AndExoPlayerView
            android:id="@+id/andExoPlayerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:andexo_aspect_ratio="aspect_16_9"
            app:andexo_full_screen="true"
            app:andexo_play_when_ready="true"
            app:andexo_resize_mode="Fit"
            app:andexo_show_controller="true"
            app:default_artwork="@drawable/event1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cnt_tool" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/andExoPlayerView">

            <ImageView
                android:id="@+id/img_video_credit"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                app:layout_constraintBottom_toTopOf="@+id/txt_videocredit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_video_credit" />

            <TextView
                android:id="@+id/txt_videocredit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_24dp"
                android:layout_marginRight="@dimen/_24dp"
                android:fontFamily="@font/lato_medium"
                android:gravity="center"
                android:text="@string/videocredit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayoutx"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_video_credit" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_videocredit">

                <TextView
                    android:id="@+id/txt_questions"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_46dp"
                    android:background="@drawable/proceedback_orange"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_16dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:text="@string/takequestions"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_16dp"
                    android:layout_height="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_12dp"
                    android:layout_marginRight="@dimen/_14dp"
                    android:layout_marginBottom="@dimen/_12dp"
                    android:padding="@dimen/_2dp"
                    android:src="@drawable/ic_preceed"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/txt_questions"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="@dimen/_1dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginRight="@dimen/_14dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:background="@drawable/saperator"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>